FullSb1-27-apr-15/src/objects/Assessment_un_Sandbox__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_Type__c</fullName>
        <label>Appointment_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Id_Text__c</fullName>
        <label>Contact Id Text</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End_Time</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Endpoint__c</fullName>
        <label>Request Endpoint</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start_Time</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_c__c</fullName>
        <label>Status_c</label>
        <picklist>
            <picklistValues>
                <fullName>hello</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TT_Event_Type__c</fullName>
        <label>TT_Event_Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeTrade_Event_ID__c</fullName>
        <externalId>true</externalId>
        <label>TimeTrade_Event_ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <label>User Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Assessment Sandbox Stage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Sandbox Stage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>